@@ -21,6 +21,9 @@ WC3 = WooCommerce 3+ (WordPress)
 --------------------------
 NOTE: The minimum PHP version requirement is now set to 5.6.
 
+Features:
+- Upgrade function to 5.10.0 checks strengthened Requirements.
+
 Refactorings:
 - Added some unit tests for basic classes in the Web namespace. As a consequence
   a lot of classes and methods were moved, renamed, or split:
